--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,20 @@
+.centered-image {
+  margin: auto;
+  width: 50%;
+  height: auto;
+  display: block;
+}
+
 .my-class {
-  margin: 12px;
   border: 2px solid green;
-  padding: 4px;
+  padding: 10px;
   background-color: orange;
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 50%;
+  box-sizing: border-box;
 }
 
 .box1 {
